k8s/backend-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopverse-backend-svc
  namespace: shopverse

spec:
  type: ClusterIP

  selector:
    app: shopverse-backend

  ports:
  - port: 8080
    targetPort: 8080
