k8s/frontend-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopverse-frontend-svc
  namespace: shopverse

spec:
  type: ClusterIP

  selector:
    app: shopverse-frontend

  ports:
    - port: 80
      targetPort: 80
